# mojang-api-c

./: CMakeLists.txt  LICENSE  README.md
include/mojang-api/: mojang-api.h
tests/: CMakeLists.txt  apitest.h  blockedservers.c  statistics.c  status.c  usertouuid.c  usertouuids.c  uuidtons.c  uuidtoprofile.c
